@@ -17,7 +17,7 @@
 package org.apache.solr.security;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -48,7 +48,7 @@ public class MultiDestinationAuditLoggerTest extends SolrTestCaseJ4 {
     plugins.add(conf2);
     config.put("plugins", plugins);
 
-    SolrResourceLoader loader = new SolrResourceLoader(Paths.get(""));
+    SolrResourceLoader loader = new SolrResourceLoader(Path.of(""));
     al.inform(loader);
     al.init(config);
 
