@@ -16,13 +16,15 @@
  */
 package org.apache.solr.security.jwt;
 
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.Principal;
 import java.security.cert.X509Certificate;
 import java.time.Instant;
@@ -42,13 +44,6 @@ import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import javax.servlet.FilterChain;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import org.apache.http.HttpHeaders;
-import org.apache.http.HttpRequest;
-import org.apache.http.client.protocol.HttpClientContext;
-import org.apache.http.protocol.HttpContext;
 import org.apache.solr.api.AnnotatedApi;
 import org.apache.solr.api.Api;
 import org.apache.solr.client.solrj.impl.Http2SolrClient;
@@ -65,7 +60,8 @@ import org.apache.solr.security.jwt.JWTAuthPlugin.JWTAuthenticationResponse.Auth
 import org.apache.solr.security.jwt.api.ModifyJWTAuthPluginConfigAPI;
 import org.apache.solr.servlet.LoadAdminUiServlet;
 import org.apache.solr.util.CryptoKeys;
-import org.eclipse.jetty.client.api.Request;
+import org.eclipse.jetty.client.Request;
+import org.eclipse.jetty.http.HttpHeader;
 import org.jose4j.jwa.AlgorithmConstraints;
 import org.jose4j.jwk.HttpsJwks;
 import org.jose4j.jwt.JwtClaims;
@@ -336,7 +332,7 @@ public class JWTAuthPlugin extends AuthenticationPlugin
    * @return list of certificates found in file
    */
   Collection<? extends X509Certificate> parseCertsFromFile(String certFileName) throws IOException {
-    Path certFilePath = Paths.get(certFileName);
+    Path certFilePath = Path.of(certFileName);
     if (coreContainer != null) {
       coreContainer.assertPathAllowed(certFilePath);
     }
@@ -428,7 +424,7 @@ public class JWTAuthPlugin extends AuthenticationPlugin
   public boolean doAuthenticate(
       HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
       throws Exception {
-    String header = request.getHeader(HttpHeaders.AUTHORIZATION);
+    String header = request.getHeader(HttpHeader.AUTHORIZATION.asString());
 
     if (jwtConsumer == null) {
       if (header == null && !blockUnknown) {
@@ -856,7 +852,7 @@ public class JWTAuthPlugin extends AuthenticationPlugin
       wwwAuthParams.add("error=\"" + responseError + "\"");
       wwwAuthParams.add("error_description=\"" + message + "\"");
     }
-    headers.put(HttpHeaders.WWW_AUTHENTICATE, String.join(", ", wwwAuthParams));
+    headers.put(HttpHeader.WWW_AUTHENTICATE.asString(), String.join(", ", wwwAuthParams));
     headers.put(AuthenticationPlugin.HTTP_HEADER_X_SOLR_AUTHDATA, generateAuthDataHeader());
     return headers;
   }
@@ -955,24 +951,11 @@ public class JWTAuthPlugin extends AuthenticationPlugin
   }
 
   @Override
-  protected boolean interceptInternodeRequest(HttpRequest httpRequest, HttpContext httpContext) {
-    if (httpContext instanceof HttpClientContext) {
-      HttpClientContext httpClientContext = (HttpClientContext) httpContext;
-      if (httpClientContext.getUserToken() instanceof JWTPrincipal) {
-        JWTPrincipal jwtPrincipal = (JWTPrincipal) httpClientContext.getUserToken();
-        httpRequest.setHeader(HttpHeaders.AUTHORIZATION, "Bearer " + jwtPrincipal.getToken());
-        return true;
-      }
-    }
-    return false;
-  }
-
-  @Override
   protected boolean interceptInternodeRequest(Request request) {
     Object userToken = request.getAttributes().get(Http2SolrClient.REQ_PRINCIPAL_KEY);
-    if (userToken instanceof JWTPrincipal) {
-      JWTPrincipal jwtPrincipal = (JWTPrincipal) userToken;
-      request.headers(h -> h.put(HttpHeaders.AUTHORIZATION, "Bearer " + jwtPrincipal.getToken()));
+    if (userToken instanceof JWTPrincipal jwtPrincipal) {
+      request.headers(
+          h -> h.put(HttpHeader.AUTHORIZATION.asString(), "Bearer " + jwtPrincipal.getToken()));
       return true;
     }
     return false;
